# SobelFilter

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Convolution.cpp  Convolution.h  Denoiser.h  GaussianBlur.cpp  GaussianBlur.h  SobelFilter.cpp  SobelFilter.h
src/app/: CMakeLists.txt  SobelFilterApp.cpp  SobelFilterApp.h  main.cpp
src/core/: CMakeLists.txt  Convolution.cpp  Convolution.h
src/filters/: CMakeLists.txt  GaussianBlur.cpp  GaussianBlur.h  HorizontalSobelConvolution.h  SobelFilter.cpp  SobelFilter.h  VerticalSobelConvolution.cpp
src/utils/: CMakeLists.txt  Utils.cpp  Utils.h
